deployments/webhook-k8s-resources.template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-delete-validation-webhook
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-delete-validation-webhook
  template:
    metadata:
      labels:
        app: k8s-delete-validation-webhook
    spec:
      containers:
        - name: k8s-delete-validation-webhook
          image: ${WEBHOOK_IMAGE}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 443
          volumeMounts:
            - name: ssl-certs
              mountPath: "/data/ssl_certs"
              readOnly: true
            - name: ssl-keys
              mountPath: "/data/ssl_keys"
              readOnly: true
      volumes:
        - name: ssl-certs
          configMap:
            name: k8s-delete-validation-webhook-config
            items:
              - key: tls_cert
                path: server-cert.pem
        - name: ssl-keys
          secret:
            secretName: k8s-delete-validation-webhook-secret
            items:
              - key: tls_private_key
                path: server-key.pem
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-delete-validation-webhook 
  namespace: default
spec:
  ports:
  - port: 443
    targetPort: 443
  selector:
    app: k8s-delete-validation-webhook
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: k8s-delete-validation-webhook-cfg
webhooks:
  - name: k8s-deletion-validation-webhook.test.com
    clientConfig:
      service:
        name: k8s-delete-validation-webhook
        namespace: default
        path: "/validate"
      caBundle: ${WEBHOOK_CA_BUNDLE}
    rules:
      - operations: ["DELETE"]
        apiGroups: ["*"]
        apiVersions: ["*"]
        resources: ["deployments"]
    failurePolicy: Fail
    namespaceSelector:
      matchLabels:
        webhook: enabled
